--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     <!-- CSS de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
-    <title>Home</title>
+    <title>Toda la información sobre Buenos Aires</title>
 </head>
 
 <body>
@@ -47,11 +47,8 @@
         <div class="container-fluid">
             <div class="row p-5">
                 <div class="col-sm">
-<<<<<<< HEAD
                     <h1>Toda la información de Buenos Aires.</h1>
-=======
                     <h1>Home</h1>
->>>>>>> 7578b43a5bbb1c44f0d72fdf811488f1330f3041
                 </div>
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
@@ -59,7 +56,6 @@
             </div>
         </div>
         <!-- articulo activo -->
-<<<<<<< HEAD
         <div class="container-fluid article__active">
           <div class="col-sm p-5">
             <h1>
@@ -72,7 +68,6 @@
         <!-- otros articulos -->
         <div class="container-fluid">
             <div class="row p-5">
-=======
         <div class="container-fluid article--active m-5">
             <h1>
                 Titulo articulos
@@ -82,7 +77,6 @@
         <!-- otros articulos -->
         <div class="container-fluid">
             <div class="row">
->>>>>>> 7578b43a5bbb1c44f0d72fdf811488f1330f3041
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
