--- a/recorridos.html
+++ b/recorridos.html
@@ -10,11 +10,7 @@
     <!-- CSS de bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     
-<<<<<<< HEAD
     <title>Información turística de Buenos Aires</title>
-=======
-    <title>Home</title>
->>>>>>> 7578b43a5bbb1c44f0d72fdf811488f1330f3041
 </head>
 
 <body>
@@ -51,11 +47,7 @@
         <div class="container-fluid">
             <div class="row p-5">
                 <div class="col-sm">
-<<<<<<< HEAD
-                    <h1>Recorre Buenos Aires a tu ritmo.</h1>
-=======
-                    <h1>Home</h1>
->>>>>>> 7578b43a5bbb1c44f0d72fdf811488f1330f3041
+                    <h1>Recorre Buenos Aires a tu ritmo</h1>
                 </div>
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
