--- a/app.html
+++ b/app.html
@@ -14,20 +14,20 @@
 </head>
 
 <body>
-   <!-- empieza el header -->
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top"><!-- fixed-top -->
-            <div class="container">
-              <a class="navbar-brand" href="index.html" class="logo">
+  <!-- empieza el header -->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top"><!-- fixed-top -->
+      <div class="container">
+          <a class="navbar-brand" href="index.html" class="logo">
                 <img src="imagenes/logo.png" alt="Logo app" />
-            </a>
+          </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" href="recorridos.html">Recorridos</a>
+                    <a class="nav-link" href="recorridos.html">Recorridos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
@@ -38,9 +38,9 @@
                 </ul>
                 <button type="button" class="btn btn-primary text-uppercase navbar__button"><a class="nav-link" href="app.html">Descarga ahora</a></button>
               </div>
-            </div>
-          </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
 <!-- empieza el main -->
     <main>
       <div class="container-fluid">
@@ -63,6 +63,8 @@
                 <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
             </div>
         </div>
-      </div>
-    </main>
+      </div>   
+  </main>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>  
 </body>
