--- a/blog.html
+++ b/blog.html
@@ -48,7 +48,6 @@
             <div class="row p-5">
                 <div class="col-sm">
                     <h1>Toda la información de Buenos Aires.</h1>
-                    <h1>Home</h1>
                 </div>
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
@@ -65,51 +64,45 @@
             <div class="article__active--body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto incidunt quia non porro aliquam. Dolores sapiente tenetur aliquid aspernatur sint rerum libero, inventore rem minima nisi beatae repellat natus voluptatem excepturi unde dicta facere assumenda temporibus debitis, ratione earum. Iure, commodi vel? Corrupti quos molestias qui. Doloribus sunt optio voluptatem quasi non quos doloremque iste mollitia amet in. Iste tenetur quaerat beatae id, ea harum dolore, perferendis unde blanditiis vitae voluptas mollitia quod, cumque nesciunt placeat quibusdam impedit ullam culpa? Voluptatem officiis unde fugiat corrupti porro impedit repudiandae totam accusamus nisi eaque neque placeat iure, dolore, cum quisquam? Sequi nostrum non obcaecati molestiae, labore vero asperiores ullam et id repellat iste doloremque magni. A nam dolorum iusto architecto nobis rerum illum, sed et. Perferendis fugit officia repellendus. Consequatur quis tenetur esse eveniet ipsam? Amet quam officia iusto ut aperiam ex laudantium deleniti quidem dolore maxime aspernatur sunt maiores, sequi dignissimos qui ab saepe repellat at consequuntur numquam fuga asperiores recusandae, reprehenderit sapiente. Laboriosam maxime dolorum corporis nulla amet obcaecati magni fugit sunt, aliquid id dicta necessitatibus officia pariatur natus quaerat ullam nisi voluptatum vitae enim? Odio in accusamus perspiciatis quam at magnam, provident tempora quidem quos! Consectetur eos perferendis vel quidem neque repellendus nihil quos tenetur, placeat amet at veritatis adipisci delectus ducimus labore aliquid quia, nobis vero reiciendis quibusdam recusandae laboriosam ipsam eius? Qui nam aliquam magnam rem, ea, doloremque eligendi veniam impedit provident necessitatibus sapiente deleniti culpa neque minus iusto perferendis nesciunt, quis vitae expedita? Doloribus fugiat eligendi, soluta dolorum, debitis natus quae eos nesciunt praesentium nobis blanditiis, aut repudiandae sunt laboriosam veritatis officia consectetur eius ex! In ratione, rem eius dolore laudantium vitae, asperiores unde ducimus illo debitis sapiente quae dolorem deleniti perspiciatis eaque, soluta cupiditate. Numquam, expedita. Amet cupiditate officiis, fuga magnam qui saepe nisi? Tenetur, nemo voluptatibus nesciunt dolore nam itaque dolor odit dignissimos non ipsa magni modi tempore. Vitae accusantium recusandae omnis tenetur nihil ea voluptas aperiam ratione? Aliquam iste dignissimos praesentium voluptates nemo temporibus unde pariatur hic ea, soluta placeat! Libero, modi aperiam nulla vero dolorem ut numquam, culpa sapiente quisquam fuga reprehenderit iure velit expedita, earum nesciunt quibusdam veritatis vitae ipsum ad sint id. Iusto quam rerum fugit ipsam facere, culpa impedit harum beatae eum corporis consectetur. Reprehenderit tempora harum rerum earum, veritatis ea, beatae natus numquam fugit magni obcaecati nostrum dolores est placeat aperiam reiciendis illo nisi vero. Adipisci tempora rem at quae quam eaque eius eveniet repudiandae, voluptatum voluptas fugit ipsa, et earum, perferendis quaerat fugiat pariatur vitae amet fuga labore necessitatibus asperiores eum quas nostrum. Eius modi placeat, magni ratione maxime perspiciatis unde magnam blanditiis eveniet totam dignissimos mollitia quod? Sequi, perspiciatis iste! Illum totam dolorem rem voluptatem excepturi expedita iste, hic saepe quam error autem laborum. Nihil provident nulla suscipit atque at. Beatae consequuntur itaque perspiciatis temporibus. Officiis harum laudantium corporis incidunt consequatur maiores illum saepe, tempora, nesciunt itaque commodi at quas earum exercitationem, voluptates dolore excepturi numquam. Atque totam aspernatur voluptatum similique voluptates eveniet soluta assumenda cum.</div>
           </div>
         </div>
+
         <!-- otros articulos -->
         <div class="container-fluid">
-            <div class="row p-5">
-        <div class="container-fluid article--active m-5">
-            <h1>
-                Titulo articulos
-            </h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto incidunt quia non porro aliquam. Dolores sapiente tenetur aliquid aspernatur sint rerum libero, inventore rem minima nisi beatae repellat natus voluptatem excepturi unde dicta facere assumenda temporibus debitis, ratione earum. Iure, commodi vel? Corrupti quos molestias qui. Doloribus sunt optio voluptatem quasi non quos doloremque iste mollitia amet in. Iste tenetur quaerat beatae id, ea harum dolore, perferendis unde blanditiis vitae voluptas mollitia quod, cumque nesciunt placeat quibusdam impedit ullam culpa? Voluptatem officiis unde fugiat corrupti porro impedit repudiandae totam accusamus nisi eaque neque placeat iure, dolore, cum quisquam? Sequi nostrum non obcaecati molestiae, labore vero asperiores ullam et id repellat iste doloremque magni. A nam dolorum iusto architecto nobis rerum illum, sed et. Perferendis fugit officia repellendus. Consequatur quis tenetur esse eveniet ipsam? Amet quam officia iusto ut aperiam ex laudantium deleniti quidem dolore maxime aspernatur sunt maiores, sequi dignissimos qui ab saepe repellat at consequuntur numquam fuga asperiores recusandae, reprehenderit sapiente. Laboriosam maxime dolorum corporis nulla amet obcaecati magni fugit sunt, aliquid id dicta necessitatibus officia pariatur natus quaerat ullam nisi voluptatum vitae enim? Odio in accusamus perspiciatis quam at magnam, provident tempora quidem quos! Consectetur eos perferendis vel quidem neque repellendus nihil quos tenetur, placeat amet at veritatis adipisci delectus ducimus labore aliquid quia, nobis vero reiciendis quibusdam recusandae laboriosam ipsam eius? Qui nam aliquam magnam rem, ea, doloremque eligendi veniam impedit provident necessitatibus sapiente deleniti culpa neque minus iusto perferendis nesciunt, quis vitae expedita? Doloribus fugiat eligendi, soluta dolorum, debitis natus quae eos nesciunt praesentium nobis blanditiis, aut repudiandae sunt laboriosam veritatis officia consectetur eius ex! In ratione, rem eius dolore laudantium vitae, asperiores unde ducimus illo debitis sapiente quae dolorem deleniti perspiciatis eaque, soluta cupiditate. Numquam, expedita. Amet cupiditate officiis, fuga magnam qui saepe nisi? Tenetur, nemo voluptatibus nesciunt dolore nam itaque dolor odit dignissimos non ipsa magni modi tempore. Vitae accusantium recusandae omnis tenetur nihil ea voluptas aperiam ratione? Aliquam iste dignissimos praesentium voluptates nemo temporibus unde pariatur hic ea, soluta placeat! Libero, modi aperiam nulla vero dolorem ut numquam, culpa sapiente quisquam fuga reprehenderit iure velit expedita, earum nesciunt quibusdam veritatis vitae ipsum ad sint id. Iusto quam rerum fugit ipsam facere, culpa impedit harum beatae eum corporis consectetur. Reprehenderit tempora harum rerum earum, veritatis ea, beatae natus numquam fugit magni obcaecati nostrum dolores est placeat aperiam reiciendis illo nisi vero. Adipisci tempora rem at quae quam eaque eius eveniet repudiandae, voluptatum voluptas fugit ipsa, et earum, perferendis quaerat fugiat pariatur vitae amet fuga labore necessitatibus asperiores eum quas nostrum. Eius modi placeat, magni ratione maxime perspiciatis unde magnam blanditiis eveniet totam dignissimos mollitia quod? Sequi, perspiciatis iste! Illum totam dolorem rem voluptatem excepturi expedita iste, hic saepe quam error autem laborum. Nihil provident nulla suscipit atque at. Beatae consequuntur itaque perspiciatis temporibus. Officiis harum laudantium corporis incidunt consequatur maiores illum saepe, tempora, nesciunt itaque commodi at quas earum exercitationem, voluptates dolore excepturi numquam. Atque totam aspernatur voluptatum similique voluptates eveniet soluta assumenda cum.</p>
-        </div>
-        <!-- otros articulos -->
-        <div class="container-fluid">
-            <div class="row">
+            <div class="row p-5 justify-content-between">
                 <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Verano en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary main__button">Leer</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Otoño en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary main__button">Leer</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Invierno en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary main__button">Leer</a>
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
                     <img src="..." class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Top 5 museos de Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                      <a href="#" class="btn btn-primary main__button">Leer</a>
                     </div>
                 </div>
             </div>
         </div>
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
     </main>
 </body>
