--- a/nosotros.html
+++ b/nosotros.html
@@ -45,4 +45,7 @@
     <main>
       <h1>La mejor app para recorrer Buenos Aires a tu ritmo.</h1>
     </main>
+    <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
