--- a/index.html
+++ b/index.html
@@ -105,40 +105,40 @@
     </div>
 
     <!-- seccion descarga -->  
-          <div class="container-fluid">
-            <div class="row text-center p-5">
-                <div class="col-sm align-items-center">
-                    <h1 class="p-1">Descubrir Buenos Aires</h1>
-                    <p class="lead p-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
-                    <div class="row p-1">
-                        <div class="col">
-                            <img src="imagenes/appstore.png" class="img-fluid" alt="Logo Apple Store">
-                            <button type="button" class="btn btn-link">Apple Store</button>
-                        </div>
-                        <div class="col">
-                            <img src="imagenes/playstore.png" class="img-fluid" alt="Logo Google Playstore">
-                            <button type="button" class="btn btn-link">Google Playstore</button>
-                        </div>
-                    </div>
+        <div class="container-fluid">
+          <div class="row text-center p-5">
+            <div class="col-sm align-items-center">
+              <div><h1 class="p-1">Descubrir Buenos Aires</h1></div>
+              <div><p class="lead p-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
+              <div class="row p-1">
+                <div class="col">
+                  <div><img src="imagenes/appstore.png" class="img-fluid" alt="Logo Apple Store"></div>
+                  <div><button type="button" class="btn btn-link">Apple Store</button></div>
                 </div>
-                <div class="col-sm align-items-center">
-                    <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
+                <div class="col">
+                  <div><img src="imagenes/playstore.png" class="img-fluid" alt="Logo Google Playstore"></div>
+                  <div><button type="button" class="btn btn-link">Google Playstore</button></div>
                 </div>
+              </div>
             </div>
+            <div class="col-sm">
+              <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
+            </div>
+          </div>
         </div>
 
     <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
         <div class="container">
             <div class="row justify-content-between">
-                <div class="col-4">
+                <div class="col-2">
                     <ul>
                         <li class="py-3"><a href="nosotros.html">Empresa</a></li>
                         <li>Sobre nosotros</li>
                         <li>Contacto</li>
                     </ul>
                 </div>
-                <div class="col-4">
+                <div class="col-2">
                     <div class="row py-3 text-center">Seguinos</div>
                     <div class="row align-items-center justify-content-between">
                         <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
