--- a/app.html
+++ b/app.html
@@ -63,7 +63,32 @@
                 <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
             </div>
         </div>
-      </div>   
+      </div>
+          <!-- aca empieza el footer -->
+    <footer class="footer p-5 text-white">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-2">
+                    <ul>
+                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li>Sobre nosotros</li>
+                        <li>Contacto</li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <div class="row py-3 text-center">Seguinos</div>
+                    <div class="row align-items-center justify-content-between">
+                        <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
+                        <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2 m-3">Copyright</div>
+                <div class="col-2 m-3">Terms and conditions</div>
+            </div>
+        </div>
+    </footer>
   </main>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>  
