--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
         <div class="container-fluid">
             <div class="row p-5 justify-content-between">
                 <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="imagenes/buenosaires3.webp" class="card-img-top" alt="Verano en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Verano en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -77,7 +77,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="imagenes/buenosaires1.jpeg" class="card-img-top" alt="Otoño en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Otoño en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +85,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="imagenes/buenosaires2.jpeg" class="card-img-top" alt="Invierno en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Invierno en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -93,15 +93,40 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                    <img src="imagenes/buenosaires4.jpeg" class="card-img-top" alt="Top 5 barrios de Buenos Aires">
                     <div class="card-body">
-                      <h5 class="card-title">Top 5 museos de Buenos Aires</h5>
+                      <h5 class="card-title">Top 5 barrios de Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                       <a href="#" class="btn btn-primary main__button">Leer</a>
                     </div>
                 </div>
             </div>
         </div>
+            <!-- aca empieza el footer -->
+    <footer class="footer p-5 text-white">
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-2">
+                    <ul>
+                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li>Sobre nosotros</li>
+                        <li>Contacto</li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <div class="row py-3 text-center">Seguinos</div>
+                    <div class="row align-items-center justify-content-between">
+                        <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
+                        <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2 m-3">Copyright</div>
+                <div class="col-2 m-3">Terms and conditions</div>
+            </div>
+        </div>
+    </footer>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
     </main>
