--- a/preguntas.html
+++ b/preguntas.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-   <!-- empieza el header -->
-    <header>
+  <!-- empieza el header -->
+  <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top"><!-- fixed-top -->
             <div class="container">
               <a class="navbar-brand" aria-current="page" href="index.html" class="logo">
@@ -40,15 +40,14 @@
               </div>
             </div>
           </nav>
-    </header>
-    <!-- empieza el main -->
-    <main>
+  </header>
+  <!-- empieza el main -->
+  <main>
         <!-- intro -->
         <div class="container-fluid">
             <div class="row p-5">
                 <div class="col-sm">
                     <h1>No te pierdas nada de Buenos Aires.</h1>
-                    <h1>Home</h1>
                 </div>
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
@@ -117,8 +116,33 @@
                 </div>
               </div>
           </div>
-    </main>
-    <!-- JavaScript Bundle with Popper -->
+          <!-- aca empieza el footer -->
+    <footer class="footer p-5 text-white">
+      <div class="container">
+          <div class="row justify-content-between">
+              <div class="col-2">
+                  <ul>
+                      <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                      <li>Sobre nosotros</li>
+                      <li>Contacto</li>
+                  </ul>
+              </div>
+              <div class="col-2">
+                  <div class="row py-3 text-center">Seguinos</div>
+                  <div class="row align-items-center justify-content-between">
+                      <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
+                      <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
+                  </div>
+              </div>
+          </div>
+          <div class="row justify-content-center">
+              <div class="col-2 m-3">Copyright</div>
+              <div class="col-2 m-3">Terms and conditions</div>
+          </div>
+      </div>
+    </footer>
+  </main>
+  <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 
 </body>
