--- a/app.html
+++ b/app.html
@@ -42,35 +42,35 @@
     </nav>
   </header>
 <!-- empieza el main -->
-    <main>
-      <div class="container-fluid">
-        <div class="row text-center p-5">
-            <div class="col-sm align-items-center">
-                <h1 class="p-1">Descubrir Buenos Aires</h1>
-                <p class="lead p-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
-                <div class="row p-1">
-                    <div class="col">
-                        <img src="imagenes/appstore.png" class="img-fluid" alt="Logo Apple Store">
-                        <button type="button" class="btn btn-link">Apple Store</button>
-                    </div>
-                    <div class="col">
-                        <img src="imagenes/playstore.png" class="img-fluid" alt="Logo Google Playstore">
-                        <button type="button" class="btn btn-link">Google Playstore</button>
-                    </div>
-                </div>
+  <main>
+    <div class="container-fluid">
+      <div class="row text-center d-flex align-items-center">
+        <div class="col-sm">
+          <div><h1 class="p-3">Descubrir Buenos Aires</h1></div>
+          <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
+          <div class="row p-5">
+            <div class="col">
+              <div><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div>
+              <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
             </div>
-            <div class="col-sm align-items-center">
-                <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
+            <div class="col">
+              <div><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div>
+              <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
             </div>
+          </div>
+        </div>
+        <div class="col-sm">
+          <img src="imagenes/apps.png" class="img-fluid" alt="Imágenes de nuestra app">
         </div>
       </div>
-          <!-- aca empieza el footer -->
+    </div>
+    <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
                     <ul>
-                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
                         <li>Sobre nosotros</li>
                         <li>Contacto</li>
                     </ul>
@@ -90,6 +90,7 @@
         </div>
     </footer>
   </main>
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>  
 </body>
