--- a/blog.html
+++ b/blog.html
@@ -52,6 +52,7 @@
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
+                <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid pt-3" alt="Responsive image"></div>
             </div>
         </div>
         <!-- articulo activo -->
@@ -60,7 +61,9 @@
             <h1>
               Visitar Buenos Aires en primavera
             </h1>
-            <div class="article__active--intro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eligendi eveniet incidunt in explicabo, error, earum doloribus sit, corrupti officiis quaerat! Laboriosam nesciunt ut, exercitationem pariatur fugiat praesentium cupiditate saepe quas consequatur eveniet. Suscipit ullam, cumque officiis ipsum molestias natus, atque quis mollitia, fugiat placeat recusandae id? Impedit, nesciunt officiis?</div>
+            <div class="article__active--intro p-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet eligendi eveniet incidunt in explicabo, error, earum doloribus sit, corrupti officiis quaerat! Laboriosam nesciunt ut, exercitationem pariatur fugiat praesentium cupiditate saepe quas consequatur eveniet. Suscipit ullam, cumque officiis ipsum molestias natus, atque quis mollitia, fugiat placeat recusandae id? Impedit, nesciunt officiis?</div>
+            <div class="article__active--body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto incidunt quia non porro aliquam. Dolores sapiente tenetur aliquid aspernatur sint rerum libero, inventore rem minima nisi beatae repellat natus voluptatem excepturi unde dicta facere assumenda temporibus debitis, ratione earum. Iure, commodi vel? Corrupti quos molestias qui. Doloribus sunt optio voluptatem quasi non quos doloremque iste mollitia amet in. Iste tenetur quaerat beatae id, ea harum dolore, perferendis unde blanditiis vitae voluptas mollitia quod, cumque nesciunt placeat quibusdam impedit ullam culpa? Voluptatem officiis unde fugiat corrupti porro impedit repudiandae totam accusamus nisi eaque neque placeat iure, dolore, cum quisquam? Sequi nostrum non obcaecati molestiae, labore vero asperiores ullam et id repellat iste doloremque magni. A nam dolorum iusto architecto nobis rerum illum, sed et. Perferendis fugit officia repellendus. Consequatur quis tenetur esse eveniet ipsam? Amet quam officia iusto ut aperiam ex laudantium deleniti quidem dolore maxime aspernatur sunt maiores, sequi dignissimos qui ab saepe repellat at consequuntur numquam fuga asperiores recusandae, reprehenderit sapiente. Laboriosam maxime dolorum corporis nulla amet obcaecati magni fugit sunt, aliquid id dicta necessitatibus officia pariatur natus quaerat ullam nisi voluptatum vitae enim? Odio in accusamus perspiciatis quam at magnam, provident tempora quidem quos! Consectetur eos perferendis vel quidem neque repellendus nihil quos tenetur, placeat amet at veritatis adipisci delectus ducimus labore aliquid quia, nobis vero reiciendis quibusdam recusandae laboriosam ipsam eius? Qui nam aliquam magnam rem, ea, doloremque eligendi veniam impedit provident necessitatibus sapiente deleniti culpa neque minus iusto perferendis nesciunt, quis vitae expedita? Doloribus fugiat eligendi, soluta dolorum, debitis natus quae eos nesciunt praesentium nobis blanditiis, aut repudiandae sunt laboriosam veritatis officia consectetur eius ex! In ratione, rem eius dolore laudantium vitae, asperiores unde ducimus illo debitis sapiente quae dolorem deleniti perspiciatis eaque, soluta cupiditate. Numquam, expedita. Amet cupiditate officiis, fuga magnam qui saepe nisi? Tenetur, nemo voluptatibus nesciunt dolore nam itaque dolor odit dignissimos non ipsa magni modi tempore. Vitae accusantium recusandae omnis tenetur nihil ea voluptas aperiam ratione? Aliquam iste dignissimos praesentium voluptates nemo temporibus unde pariatur hic ea, soluta placeat! Libero, modi aperiam nulla vero dolorem ut numquam, culpa sapiente quisquam fuga reprehenderit iure velit expedita, earum nesciunt quibusdam veritatis vitae ipsum ad sint id. Iusto quam rerum fugit ipsam facere, culpa impedit harum beatae eum corporis consectetur. Reprehenderit tempora harum rerum earum, veritatis ea, beatae natus numquam fugit magni obcaecati nostrum dolores est placeat aperiam reiciendis illo nisi vero. Adipisci tempora rem at quae quam eaque eius eveniet repudiandae, voluptatum voluptas fugit ipsa, et earum, perferendis quaerat fugiat pariatur vitae amet fuga labore necessitatibus asperiores eum quas nostrum. Eius modi placeat, magni ratione maxime perspiciatis unde magnam blanditiis eveniet totam dignissimos mollitia quod? Sequi, perspiciatis iste! Illum totam dolorem rem voluptatem excepturi expedita iste, hic saepe quam error autem laborum. Nihil provident nulla suscipit atque at. Beatae consequuntur itaque perspiciatis temporibus. Officiis harum laudantium corporis incidunt consequatur maiores illum saepe, tempora, nesciunt itaque commodi at quas earum exercitationem, voluptates dolore excepturi numquam. Atque totam aspernatur voluptatum similique voluptates eveniet soluta assumenda cum.</div>
+            <div class="div d-flex justify-content-center"><img src="/imagenes/buenosaires5.jpeg" class="img-fluid p-5" alt="Responsive image"></div>
             <div class="article__active--body">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto incidunt quia non porro aliquam. Dolores sapiente tenetur aliquid aspernatur sint rerum libero, inventore rem minima nisi beatae repellat natus voluptatem excepturi unde dicta facere assumenda temporibus debitis, ratione earum. Iure, commodi vel? Corrupti quos molestias qui. Doloribus sunt optio voluptatem quasi non quos doloremque iste mollitia amet in. Iste tenetur quaerat beatae id, ea harum dolore, perferendis unde blanditiis vitae voluptas mollitia quod, cumque nesciunt placeat quibusdam impedit ullam culpa? Voluptatem officiis unde fugiat corrupti porro impedit repudiandae totam accusamus nisi eaque neque placeat iure, dolore, cum quisquam? Sequi nostrum non obcaecati molestiae, labore vero asperiores ullam et id repellat iste doloremque magni. A nam dolorum iusto architecto nobis rerum illum, sed et. Perferendis fugit officia repellendus. Consequatur quis tenetur esse eveniet ipsam? Amet quam officia iusto ut aperiam ex laudantium deleniti quidem dolore maxime aspernatur sunt maiores, sequi dignissimos qui ab saepe repellat at consequuntur numquam fuga asperiores recusandae, reprehenderit sapiente. Laboriosam maxime dolorum corporis nulla amet obcaecati magni fugit sunt, aliquid id dicta necessitatibus officia pariatur natus quaerat ullam nisi voluptatum vitae enim? Odio in accusamus perspiciatis quam at magnam, provident tempora quidem quos! Consectetur eos perferendis vel quidem neque repellendus nihil quos tenetur, placeat amet at veritatis adipisci delectus ducimus labore aliquid quia, nobis vero reiciendis quibusdam recusandae laboriosam ipsam eius? Qui nam aliquam magnam rem, ea, doloremque eligendi veniam impedit provident necessitatibus sapiente deleniti culpa neque minus iusto perferendis nesciunt, quis vitae expedita? Doloribus fugiat eligendi, soluta dolorum, debitis natus quae eos nesciunt praesentium nobis blanditiis, aut repudiandae sunt laboriosam veritatis officia consectetur eius ex! In ratione, rem eius dolore laudantium vitae, asperiores unde ducimus illo debitis sapiente quae dolorem deleniti perspiciatis eaque, soluta cupiditate. Numquam, expedita. Amet cupiditate officiis, fuga magnam qui saepe nisi? Tenetur, nemo voluptatibus nesciunt dolore nam itaque dolor odit dignissimos non ipsa magni modi tempore. Vitae accusantium recusandae omnis tenetur nihil ea voluptas aperiam ratione? Aliquam iste dignissimos praesentium voluptates nemo temporibus unde pariatur hic ea, soluta placeat! Libero, modi aperiam nulla vero dolorem ut numquam, culpa sapiente quisquam fuga reprehenderit iure velit expedita, earum nesciunt quibusdam veritatis vitae ipsum ad sint id. Iusto quam rerum fugit ipsam facere, culpa impedit harum beatae eum corporis consectetur. Reprehenderit tempora harum rerum earum, veritatis ea, beatae natus numquam fugit magni obcaecati nostrum dolores est placeat aperiam reiciendis illo nisi vero. Adipisci tempora rem at quae quam eaque eius eveniet repudiandae, voluptatum voluptas fugit ipsa, et earum, perferendis quaerat fugiat pariatur vitae amet fuga labore necessitatibus asperiores eum quas nostrum. Eius modi placeat, magni ratione maxime perspiciatis unde magnam blanditiis eveniet totam dignissimos mollitia quod? Sequi, perspiciatis iste! Illum totam dolorem rem voluptatem excepturi expedita iste, hic saepe quam error autem laborum. Nihil provident nulla suscipit atque at. Beatae consequuntur itaque perspiciatis temporibus. Officiis harum laudantium corporis incidunt consequatur maiores illum saepe, tempora, nesciunt itaque commodi at quas earum exercitationem, voluptates dolore excepturi numquam. Atque totam aspernatur voluptatum similique voluptates eveniet soluta assumenda cum.</div>
           </div>
         </div>
@@ -69,7 +72,7 @@
         <div class="container-fluid">
             <div class="row p-5 justify-content-between">
                 <div class="card" style="width: 18rem;">
-                    <img src="imagenes/buenosaires3.webp" class="card-img-top" alt="Verano en Buenos Aires">
+                    <img src="imagenes/buenosaires1.png" class="card-img-top pt-3" alt="Verano en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Verano en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -77,7 +80,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="imagenes/buenosaires1.jpeg" class="card-img-top" alt="Otoño en Buenos Aires">
+                    <img src="imagenes/buenosaires2.png" class="card-img-top pt-3" alt="Otoño en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Otoño en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -85,7 +88,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="imagenes/buenosaires2.jpeg" class="card-img-top" alt="Invierno en Buenos Aires">
+                    <img src="imagenes/buenosaires3.png" class="card-img-top pt-3" alt="Invierno en Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Invierno en Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -93,7 +96,7 @@
                     </div>
                   </div>
                   <div class="card" style="width: 18rem;">
-                    <img src="imagenes/buenosaires4.jpeg" class="card-img-top" alt="Top 5 barrios de Buenos Aires">
+                    <img src="imagenes/buenosaires4.png" class="card-img-top pt-3" alt="Top 5 barrios de Buenos Aires">
                     <div class="card-body">
                       <h5 class="card-title">Top 5 barrios de Buenos Aires</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -102,13 +105,14 @@
                 </div>
             </div>
         </div>
-            <!-- aca empieza el footer -->
+
+     <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
                     <ul>
-                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
                         <li>Sobre nosotros</li>
                         <li>Contacto</li>
                     </ul>
@@ -127,7 +131,8 @@
             </div>
         </div>
     </footer>
-  <!-- JavaScript Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
-    </main>
+  </main>
+
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>    
 </body>
