--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="recorridos.html">Recorridos</a>
+                    <a class="nav-link" aria-current="page" href="recorridos.html">Recorridos</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="blog.html">Blog</a>
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
-                    <button type="button" class="btn btn-primary text-uppercase main__button">Descarga la app</button>
+                    <button type="button" class="btn btn-primary text-uppercase main__button"><a class="nav-link" href="app.html">Descarga ahora</a></button>
                 </div>
             </div>
         </div>
@@ -73,21 +73,21 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="imagenes/cardcentro.png" class="d-block w-100" alt="Foto del centro de Buenos Aires">
+            <img src="imagenes/home_buenosaires1.png" class="d-block w-100" alt="Foto del centro de Buenos Aires">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido Centro</h5>
               <p>Some representative placeholder content for the first slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imagenes/cardlaboca.png" class="d-block w-100" alt="Foto del barrio de La Boca">
+            <img src="imagenes/home_buenosaires2.png" class="d-block w-100" alt="Foto del barrio de La Boca">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido La Boca</h5>
               <p>Some representative placeholder content for the second slide.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="imagenes/cardrecoleta.png" class="d-block w-100" alt="Foto del barrio de Recoleta">
+            <img src="imagenes/home_buenosaires3.png" class="d-block w-100" alt="Foto del barrio de Recoleta">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido Recoleta</h5>
               <p>Some representative placeholder content for the third slide.</p>
@@ -106,18 +106,18 @@
 
     <!-- seccion descarga -->  
         <div class="container-fluid">
-          <div class="row text-center p-5">
-            <div class="col-sm align-items-center">
-              <div><h1 class="p-1">Descubrir Buenos Aires</h1></div>
-              <div><p class="lead p-1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
-              <div class="row p-1">
+          <div class="row text-center d-flex align-items-center">
+            <div class="col-sm">
+              <div><h1 class="p-5">Descubrir Buenos Aires</h1></div>
+              <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
+              <div class="row p-5">
                 <div class="col">
-                  <div><img src="imagenes/appstore.png" class="img-fluid" alt="Logo Apple Store"></div>
-                  <div><button type="button" class="btn btn-link">Apple Store</button></div>
+                  <div><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div>
+                  <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
                 </div>
                 <div class="col">
-                  <div><img src="imagenes/playstore.png" class="img-fluid" alt="Logo Google Playstore"></div>
-                  <div><button type="button" class="btn btn-link">Google Playstore</button></div>
+                  <div><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div>
+                  <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
                 </div>
               </div>
             </div>
@@ -133,7 +133,7 @@
             <div class="row justify-content-between">
                 <div class="col-2">
                     <ul>
-                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
                         <li>Sobre nosotros</li>
                         <li>Contacto</li>
                     </ul>
