--- a/preguntas.html
+++ b/preguntas.html
@@ -53,9 +53,11 @@
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
             </div>
+            <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid p-3" alt="Responsive image"></div>
+            
         </div>
         <!-- preguntas -->
-        <div class="accordion" id="accordionExample">
+        <div class="accordion pt-5" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">¿Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, laborum?
@@ -116,30 +118,31 @@
                 </div>
               </div>
           </div>
-          <!-- aca empieza el footer -->
+
+    <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
-      <div class="container">
-          <div class="row justify-content-between">
-              <div class="col-2">
-                  <ul>
-                      <li class="py-3"><a href="nosotros.html">Empresa</a></li>
-                      <li>Sobre nosotros</li>
-                      <li>Contacto</li>
-                  </ul>
-              </div>
-              <div class="col-2">
-                  <div class="row py-3 text-center">Seguinos</div>
-                  <div class="row align-items-center justify-content-between">
-                      <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
-                      <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
-                  </div>
-              </div>
-          </div>
-          <div class="row justify-content-center">
-              <div class="col-2 m-3">Copyright</div>
-              <div class="col-2 m-3">Terms and conditions</div>
-          </div>
-      </div>
+        <div class="container">
+            <div class="row justify-content-between">
+                <div class="col-2">
+                    <ul>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
+                        <li>Sobre nosotros</li>
+                        <li>Contacto</li>
+                    </ul>
+                </div>
+                <div class="col-2">
+                    <div class="row py-3 text-center">Seguinos</div>
+                    <div class="row align-items-center justify-content-between">
+                        <div class="col"><a href="#"><img src="imagenes/LinkedinIcon.png" class="img-fluid" alt="Logo LinkedIn"></a></div>
+                        <div class="col"><a href="#"><img src="imagenes/InstagramIcon.png" class="img-fluid" alt="Logo Instagram"></a></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="col-2 m-3">Copyright</div>
+                <div class="col-2 m-3">Terms and conditions</div>
+            </div>
+        </div>
     </footer>
   </main>
   <!-- JavaScript Bundle with Popper -->
