--- a/recorridos.html
+++ b/recorridos.html
@@ -109,13 +109,14 @@
               </div>
             </div>
           </div>
-          <!-- aca empieza el footer -->
+          
+    <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
                     <ul>
-                        <li class="py-3"><a href="nosotros.html">Empresa</a></li>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
                         <li>Sobre nosotros</li>
                         <li>Contacto</li>
                     </ul>
@@ -135,6 +136,7 @@
         </div>
     </footer>
   </main>
+
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
