--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
-                <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid pt-3" alt="Responsive image"></div>
+                <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid pt-3" alt="Logo app"></div>
             </div>
         </div>
         <!-- articulo activo -->
