--- a/nosotros.html
+++ b/nosotros.html
@@ -53,7 +53,7 @@
                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
            </div>
-           <div class="div"><img src="/imagenes/equipo.webp" class="img-fluid" alt="Responsive image"></div>
+           <div class="div"><img src="/imagenes/equipo.webp" class="img-fluid" alt="Foto de nuestro equipo"></div>
            <div class="div"></div>
        </div>
        
