--- a/preguntas.html
+++ b/preguntas.html
@@ -53,7 +53,7 @@
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
             </div>
-            <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid p-3" alt="Responsive image"></div>
+            <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid p-3" alt="Logo app"></div>
             
         </div>
         <!-- preguntas -->
