--- a/app.html
+++ b/app.html
@@ -46,15 +46,15 @@
     <div class="container-fluid">
       <div class="row text-center d-flex align-items-center">
         <div class="col-sm">
-          <div><h1 class="p-3">Descubrir Buenos Aires</h1></div>
+          <div><h1 class="p-5">Descubrir Buenos Aires</h1></div>
           <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
           <div class="row p-5">
             <div class="col">
-              <div><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div>
+              <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div></a>
               <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
             </div>
-            <div class="col">
-              <div><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div>
+             <div class="col">
+              <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div></a>
               <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
             </div>
           </div>
@@ -64,6 +64,7 @@
         </div>
       </div>
     </div>
+
     <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
         <div class="container">
