--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-   <!-- empieza el header -->
-    <header>
+  <!-- empieza el header -->
+  <header>
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container">
                 <a class="navbar-brand" aria-current="page" href="index.html" class="logo">
@@ -48,10 +48,10 @@
               </div>
             </div>
         </nav>
-    </header>
+  </header>
 <!-- empieza el main -->
-    <main>
-    <!-- intro -->
+  <main>
+  <!-- intro -->
         <div class="container-fluid">
             <div class="row p-5">
                 <div class="col-sm">
@@ -65,6 +65,7 @@
         </div>
     
     <!-- carrousel -->
+    <a href="/recorridos.html">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -103,6 +104,7 @@
           <span class="visually-hidden">Next</span>
         </button>
     </div>
+    </a>
 
     <!-- seccion descarga -->  
         <div class="container-fluid">
@@ -112,11 +114,11 @@
               <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
               <div class="row p-5">
                 <div class="col">
-                  <div><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div>
+                  <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div></a>
                   <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
                 </div>
                 <div class="col">
-                  <div><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div>
+                  <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div></a>
                   <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
                 </div>
               </div>
