--- a/preguntas.html
+++ b/preguntas.html
@@ -53,10 +53,10 @@
                 <div class="col-sm text-center">
                     <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
                 </div>
-            </div>
-            <div class="div d-flex justify-content-center"><img src="/imagenes/logoColor.png" class="img-fluid p-3" alt="Logo app"></div>
-            
+            </div> 
         </div>
+        <div class="div"><img src="/imagenes/banner2.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+           
         <!-- preguntas -->
         <div class="accordion pt-5" id="accordionExample">
             <div class="accordion-item">
