--- a/preguntas.html
+++ b/preguntas.html
@@ -61,63 +61,63 @@
         <div class="accordion pt-5" id="accordionExample">
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingOne">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">¿Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, laborum?
+                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">¿Cómo descargo la app?
                 </button>
               </h2>
               <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Hay muchas formas de descargar la app.</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corrupti, officiis nobis ab sit iure adipisci dolores? Sapiente animi maiores alias, neque dolorum, totam error cupiditate quia nesciunt odio repellat officia repudiandae minima beatae dolorem ipsa nihil optio rerum eos ab suscipit! Quod accusantium commodi ab odio itaque expedita cumque tempore. Dignissimos incidunt sequi laboriosam quas. Quas nemo asperiores repellendus, saepe assumenda ratione doloribus expedita tempore mollitia veniam voluptatem, cupiditate blanditiis tempora a dolorum fuga possimus quam sint? Sapiente eveniet quas excepturi perspiciatis minima quasi esse quibusdam? Ratione nemo at repudiandae voluptate reiciendis. Dolores rem dignissimos ipsam, neque ea suscipit minima!
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingTwo">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    ¿Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, laborum?
+                    No tengo internet sin WIFI. ¿Puedo usarla offline?
                 </button>
               </h2>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Sí.</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate facilis deleniti dicta quibusdam molestiae voluptatum, earum quaerat, ipsam, placeat nesciunt beatae? Libero doloremque beatae quidem ex voluptas magnam, ipsam blanditiis suscipit neque commodi deleniti. Libero, laborum incidunt explicabo esse unde rerum voluptatem atque aperiam cupiditate enim recusandae velit illo quis temporibus asperiores facere voluptas reprehenderit provident delectus adipisci itaque sequi.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <h2 class="accordion-header" id="headingThree">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                  ¿Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat sunt nobis id placeat reiciendis tenetur?
+                  Estaré solamente un día en Buenos Aires. ¿Me alcanza el tiempo para hacer los recorridos?
                 </button>
               </h2>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                 <div class="accordion-body">
-                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  <strong>Sí.</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatum aut consequuntur, quam at animi non ea excepturi! Tempora dolorem reiciendis dolore consectetur. Reprehenderit unde asperiores recusandae incidunt eligendi repellat suscipit? Et temporibus ducimus nulla quo placeat at dolor maxime, rem praesentium laudantium accusantium. Expedita culpa quia similique adipisci sunt dolores saepe nemo necessitatibus commodi blanditiis, iste ipsum ad rerum nam modi quibusdam dolorum, asperiores facilis autem? Magnam earum fugit sint, debitis odio accusantium dicta placeat voluptates. Quisquam obcaecati minima voluptates.
                 </div>
               </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                      ¿Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, laborum?
+                      ¿Dónde puedo encontrar información sobre transporte en Buenos Aires?
                   </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <strong>Recomendamos el sitio web blabla.</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium sit dolore magni eveniet reiciendis doloremque voluptatum, mollitia similique iure natus aspernatur, inventore repellendus dolorem ipsam quisquam autem debitis, quam totam?
                   </div>
                 </div>
-              </div>
-              <div class="accordion-item">
+            </div>
+            <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    ¿Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat sunt nobis id placeat reiciendis tenetur?
+                    Necesito contactarme con el servicio técnico.
                   </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    <strong>Estamos disponibles 24hs.</strong> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta architecto aperiam, fuga soluta voluptas esse vel, sint nisi, molestias dolorum aspernatur? Consectetur ea nam consequuntur soluta? Nemo, voluptas vitae culpa assumenda dicta laboriosam. Voluptatibus perferendis ullam, neque ea molestiae eum? Veniam delectus beatae facilis dolore accusamus suscipit dignissimos non eaque.
                   </div>
                 </div>
-              </div>
+            </div>
           </div>
 
     <!-- aca empieza el footer -->
