update contenidos: textos, icono e imagenes

--- a/app.html
+++ b/app.html
@@ -50,15 +50,15 @@
     <div class="container-fluid">
       <div class="row text-center d-flex align-items-center">
         <div class="col-sm">
-          <div><h1 class="p-2">Descubrir Buenos Aires</h1></div>
-          <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
+          <div><h1 class="p-2">Visitas auto guiadas divertidas, informativas y adaptadas a tu estilo.</h1></div>
+          <div><p class="lead p-3">BApp propone una experiencia de descubrimiento de la ciudad flexible y completamente adaptable a tus necesidades.</p></div>
           <div class="row p-5">
             <div class="col">
-              <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div></a>
+              <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3 appstore__icon" alt="Logo Apple Store"></div></a>
               <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
             </div>
              <div class="col">
-              <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div></a>
+              <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3 appstore__icon" alt="Logo Google Playstore"></div></a>
               <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
             </div>
           </div>
@@ -74,11 +74,11 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
-                    </ul>
+                  <ul>
+                    <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
+                </ul>
                 </div>
                 <div class="col-2">
                     <div class="row py-3 d-flex justify-content-center">Seguinos</div>
