--- a/blog.html
+++ b/blog.html
@@ -52,10 +52,10 @@
         <div class="container-fluid">
             <div class="row p-5">
                 <div class="col-sm">
-                    <h1>Toda la información de Buenos Aires.</h1>
+                    <h1>Encuentra toda la información de Buenos Aires.</h1>
                 </div>
                 <div class="col-sm text-center">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
+                    <p class="lead">Prepara tu visita y entérate de las novedades para aprovechar al máximo tu estadía en la ciudad.</p>
                 </div>
             </div>
         </div>
@@ -122,11 +122,11 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
-                    </ul>
+                  <ul>
+                    <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
+                   </ul>
                 </div>
                 <div class="col-2">
                     <div class="row py-3 d-flex justify-content-center">Seguinos</div>
