--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
   <!-- intro -->
         <div class="container-fluid">
             <div class="row p-5">
-                <div class="col-sm">
-                    <h1>Descubrir Buenos Aires</h1>
+                <div class="col-sm d-flex">
+                    <h1>Buenos Aires en tu bolsillo.</h1>
                 </div>
                 <div class="col-sm text-center">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
+                    <p class="lead">BApp es la forma de recorrer Buenos Aires a tu ritmo, con quien quieras y cuando quieras. Nuestras audio guías te llevarán por los lugares imperdibles de la ciudad, y te harán descubrir rincones secretos únicos.</p>
                     <button type="button" class="btn btn-primary text-uppercase main__button"><a class="nav-link" href="app.html">Descarga ahora</a></button>
                 </div>
             </div>
@@ -76,21 +76,21 @@
             <img src="imagenes/home_buenosaires1.png" class="d-block w-100" alt="Foto del centro de Buenos Aires">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido Centro</h5>
-              <p>Some representative placeholder content for the first slide.</p>
+              <p>Descubre una mezcla única de historia y modernidad.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imagenes/home_buenosaires2.png" class="d-block w-100" alt="Foto del barrio de La Boca">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido La Boca</h5>
-              <p>Some representative placeholder content for the second slide.</p>
+              <p>Explora los míticos arrabales porteños.</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="imagenes/home_buenosaires3.png" class="d-block w-100" alt="Foto del barrio de Recoleta">
             <div class="carousel-caption d-none d-md-block">
               <h5>Recorrido Recoleta</h5>
-              <p>Some representative placeholder content for the third slide.</p>
+              <p>Sumérgete en el corazón de la vida cultural de Buenos Aires.</p>
             </div>
           </div>
         </div>
@@ -109,15 +109,15 @@
         <div class="container-fluid">
           <div class="row text-center d-flex align-items-center">
             <div class="col-sm">
-              <div><h1 class="p-5">Descubrir Buenos Aires</h1></div>
-              <div><p class="lead p-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p></div>
+              <div><h1 class="p-5">Visitas auto guiadas divertidas, informativas y adaptadas a tu estilo.</h1></div>
+              <div><p class="lead p-3">BApp propone una experiencia de descubrimiento de la ciudad flexible y completamente adaptable a tus necesidades.</p></div>
               <div class="row p-5">
                 <div class="col">
-                  <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3" alt="Logo Apple Store"></div></a>
+                  <div><a href="#"><img src="imagenes/appstore.png" class="img-fluid pb-3 appstore__icon" alt="Logo Apple Store"></div></a>
                   <div><a href="#" class="text-decoration-none text-dark">Apple Store</a></div>
                 </div>
                 <div class="col">
-                  <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3" alt="Logo Google Playstore"></div></a>
+                  <div><a href="#"><img src="imagenes/playstore.png" class="img-fluid pb-3 appstore__icon" alt="Logo Google Playstore"></div></a>
                   <div><a href="#" class="text-decoration-none text-dark">Play Store</a></div>
                 </div>
               </div>
@@ -133,11 +133,11 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
-                    </ul>
+                  <ul>
+                    <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
+                  </ul>
                 </div>
                 <div class="col-2">
                     <div class="row py-3 d-flex justify-content-center">Seguinos</div>
