--- a/nosotros.html
+++ b/nosotros.html
@@ -48,18 +48,18 @@
 <!-- empieza el main -->
    <main>
    <!-- intro -->
-       <div class="container-fluid">
-           <div class="row p-5">
-               <div class="col-sm">
-                   <h1>Creamos experiencias inolvidables.</h1>
-               </div>
-               <div class="col-sm text-center">
-                   <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
-                </div>
-           </div>
-           <div class="div"><img src="/imagenes/equipo.webp" class="img-fluid" alt="Foto de nuestro equipo"></div>
-           <div class="div"></div>
-       </div>
+        <div class="container-fluid">
+          <div class="row p-5">
+            <div class="col-sm">
+              <h1>Creamos experiencias inolvidables.</h1>
+            </div>
+            <div class="col-sm text-center">
+              <p class="lead">Somos un equipo de amantes de Buenos Aires y usamos la tecnología para crear experiencias únicas y adaptadas a las necesidades del viajero moderno.</p>
+            </div>
+          </div>
+          <div class="div"><img src="/imagenes/equipo.webp" class="img-fluid" alt="Foto de nuestro equipo"></div>
+          <div class="col p-5 text-center">Por dudad y consultas, escríbenos a <a href="#" class="link-primary">contacto@bapp.com.ar</a>.</div>
+        </div>
        
     <!-- aca empieza el footer -->
     <footer class="footer p-5 text-white">
@@ -67,9 +67,9 @@
             <div class="row justify-content-between">
                 <div class="col-2">
                     <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
+                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                        <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                        <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-2">
