--- a/preguntas.html
+++ b/preguntas.html
@@ -51,11 +51,11 @@
                     <h1>No te pierdas nada de Buenos Aires.</h1>
                 </div>
                 <div class="col-sm text-center">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
+                    <p class="lead">No te quedes con la duda. Encuentras aquí las preguntas más frecuentes y no dudes en contactarnos si tienes otra consulta.</p>
                 </div>
             </div> 
         </div>
-        <div class="div"><img src="/imagenes/banner2.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+        <div class="div"><img src="/imagenes/banner3.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
            
         <!-- preguntas -->
         <div class="accordion pt-5" id="accordionExample">
@@ -125,11 +125,11 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
-                    </ul>
+                  <ul>
+                    <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
+                  </ul>
                 </div>
                 <div class="col-2">
                     <div class="row py-3 d-flex justify-content-center">Seguinos</div>
