--- a/recorridos.html
+++ b/recorridos.html
@@ -54,10 +54,19 @@
                     <h1>Recorre Buenos Aires a tu ritmo.</h1>
                 </div>
                 <div class="col-sm text-center">
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa eligendi similique dicta architecto neque id animi velit sed magni quas?</p>
+                    <p class="lead">Creada por locales que conocen todos sus secretos, la app te guiará por los sitios imperdibles de Buenos Aires contándote las historias de su habitantes de ayer y hoy.</p>
                 </div>
             </div>
         </div>
+        <div class="row p-3 d-flex justify-content-center text-center recorridos--list">
+          <ul>
+              <li>- No tengas miedo de llegar tarde, puedes iniciar y terminar los recorridos cuando quieras.</li>
+              <li>- Tomate tu tiempo para hacer las pausas que necesites y conocer los cafés y restaurantes locales.</li>
+              <li>- No pierdas ninguna oportunidad de sacar fotos increíbles! </li>
+          </ul>
+      </div>
+        <div class="div"><img src="/imagenes/banner1.png" class="img-fluid" alt="Banner decorativo con imagen de Buenos Aires"></div>
+   
     <!-- cards -->
           <div class="card mb-3 m-5" style="max-width: 100%;">
             <div class="row g-0">
@@ -73,7 +82,7 @@
                     <li class="list-group-item">Casa Rosada</li>
                     <li class="list-group-item">Avenida de Mayo</li>
                   </ul>
-                  <button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div>
+                  <a href="#"><button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div></a>
               </div>
             </div>
           </div>
@@ -88,7 +97,7 @@
                     <li class="list-group-item">La Bombonera</li>
                     <li class="list-group-item">Museo Quinquela Martín</li>
                   </ul>
-                  <button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div>
+                  <a href="#"><button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div></a>
               </div>
               <div class="col-md-6">
                 <img src="imagenes/cardlaboca.png" class="img-fluid rounded-start" alt="Vista de La Boca">
@@ -109,7 +118,7 @@
                     <li class="list-group-item">Floralis Generica</li>
                     <li class="list-group-item">Bellas Artes</li>
                   </ul>
-                  <button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div>
+                  <a href="#"><button type="button" class="btn btn-primary text-uppercase main__button m-3">Ver más</button></div></a>
               </div>
             </div>
           </div>
@@ -119,11 +128,11 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-2">
-                    <ul>
-                        <li class="py-3"><a href="nosotros.html" class="text-decoration-none font-weight-bold text-white">Empresa</a></li>
-                        <li>Sobre nosotros</li>
-                        <li>Contacto</li>
-                    </ul>
+                  <ul>
+                    <li class="py-3"><a href="nosotros.html" class="text-decoration-none text-white">BApp</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Sobre nosotros</a></li>
+                    <li><a href="nosotros.html" class="text-decoration-none text-white">Contacto</a></li>
+                  </ul>
                 </div>
                 <div class="col-2">
                     <div class="row py-3 d-flex justify-content-center">Seguinos</div>
